--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-VITE_SHAZAM_CORE_RAPID_API_KEY=
-VITE_GEO_API_KEY=
+X_RAPID_API_KEY = c4897d3b85mshdcb6631d3e17e66p1a1948jsn31877eaa5edb
+X_RAPID_API_HOST = shazam-core.p.rapidapi.com
